# Fantacalcio-Builder

./: .env  .gitignore  Cargo.toml  api.Dockerfile  app.Dockerfile  buildspec.yml  docker-compose.yml
api/: Cargo.toml
api/.sqlx/: query-079332766b130519613cd31c62703c8f202ecba41563ead6f6ed96653ae10ba1.json  query-26e32b3d726e7e0030903567772a3c1b930a34872c181968fdd74c7881a2c5d6.json  query-3cfe6532f142d22a6fe3103933844702eaa3caa21e568c191454e5d86147c14b.json  query-63036b59c7067f21a25bfe72f90eb88e7e8e8e64be7280647fef50258a66e3b2.json  query-6eb7038480720e73d7e90ee681f8f2cf541c882a11fe5e27d7c51abee4c87f3c.json  query-8c2d540f8e0677564264e6b74f2074e9d270d88febdfbf4163e8969a52fd8dda.json  query-c1a02eb732d62117229b1f4f23d96aa9996f987809e5b103076e1bf645452ce4.json
api/migrations/: 20240610152726_user_table.up.sql  20240616130459_players.up.sql  20240714165442_selected_players.up.sql
api/scripts/: default_players.sql  default_players_2025.sql
api/src/: main.rs  startup.rs
api/src/models/: app_state.rs  error.rs  mod.rs  player.rs  response.rs  user.rs
api/src/routes/: mod.rs  players.rs  user.rs
api/src/services/: db.rs  helper.rs  mod.rs  player_service.rs  user_service.rs
app/: Cargo.toml  index.html
app/src/: lib.rs  main.rs
app/src/components/: credentials.rs  draggable_player.rs  field.css  field.rs  horizontal_line.rs  mod.rs  navbar.rs  player.rs  player_dropzone.rs  player_formation.rs  player_table.rs
app/src/components/input/: checkbox.rs  enum_dropdown.rs  form_input.rs  mod.rs
app/src/pages/: build_squad.rs  create_squad.rs  hello_world.rs  home.rs  login.rs  mod.rs  register.rs  select_squad.rs  test.rs
app/src/services/: api.rs  auth.rs
request-domain/: Cargo.toml
request-domain/src/: lib.rs  login.rs  player.rs  selected_player.rs
