[package]
name = "fantacalcio_builder_api"
version = "0.1.0"
edition = "2021"

[dependencies]
request-domain = { path = "../request-domain", version = "=0.1.0" }

axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5.2", features = ["cors"] }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.20"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
dotenv = "0.15"
rand = "0.8"
jwt = "0.16.0"
password-hash = "0.5.0"
rand_core = "0.6.4"
argon2 = "0.5.3"
