[package]
name = "fantacalcio_builder_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
request-domain = { path = "../request-domain", version = "=0.1.0" }

leptos = { version = "0.6.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.6", features = ["csr"] }
stylers = { version = "*" }
gloo-net = "0.5.0"
serde = "1.0.203"
thiserror = "1.0.61"
wasm-bindgen = "=0.2.91"


[build-dependencies]
stylers = { version = "*" }
