[package]
name = "fantacalcio_builder_app"
version = "0.1.0"
edition = "2021"


[dependencies]
request-domain = { path = "../request-domain", version = "=0.1.0" }

tracing = "^0.1"
leptos = { version = "0.6.9", features = ["nightly", "csr", "tracing"] }
leptos_meta = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.9", features = ["csr"] }
stylers = "*"
gloo-net = "0.5.0"
serde = "1.0.203"
thiserror = "1.0.61"
wasm-bindgen = "=0.2.92"
leptos-use = { version= "0.10.10", features = ["serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"


[build-dependencies]
stylers = { version = "*" }
